--- a/backend/ChallengeApi/appsettings.json
+++ b/backend/ChallengeApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgreSQLConnection": "Server=localhost;Port=5432;Database=db_prueba;User Id=postgres;Password=132402Mati"
+    "PostgreSQLConnection": "Server=localhost;Port=5432;Database=$TU_BASE;User Id=$TU_USUARIO;Password=$TU_PASSWORD"
   },
   "Logging": {
     "LogLevel": {
